# dicomweb-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: async_client.rs  async_reqwest.rs  async_surf.rs  blocking.rs  blocking_reqwest.rs  lib.rs
client/src/reqwest/: async_reqwest.rs  blocking_reqwest.rs  mod.rs
example/: Cargo.toml
example/src/: main.rs
examples/async_client/: Cargo.toml
examples/async_client/src/: main.rs
examples/async_reqwest/: Cargo.toml
examples/async_reqwest/src/: main.rs
examples/async_surf/: Cargo.toml
examples/async_surf/src/: main.rs
examples/blocking/: Cargo.toml
examples/blocking/src/: main.rs
examples/blocking_client/: Cargo.toml
examples/blocking_client/src/: main.rs
examples/blocking_reqwest/: Cargo.toml
examples/blocking_reqwest/src/: main.rs
examples/server_tide/: Cargo.toml
examples/server_tide/src/: main.rs
parent/: Cargo.toml  README.md
parent/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs
util/: Cargo.toml
util/src/: decode.rs  encode.rs  lib.rs
