[package]
authors = ["Victor Saase <vsaase@gmail.com>"]
description = "A pure Rust implementation of the DICOMweb standard"
edition = "2018"
keywords = ["DICOM", "DICOMweb", "medical"]
license = "MIT OR Apache-2.0"
name = "dicomweb-client"
readme = "README.md"
repository = "https://github.com/vsaase/dicomweb-rs"
version = "0.1.0"

[dependencies]
bytes = "1"
dicom = "0.4.0"
dicomweb-util = {path = "../util", version = "0.1.0"}
http = "0.2"
log = "0.4"
reqwest = {version = "0.11.3", features = ["blocking", "json"]}
serde = "1"
serde_json = "1"
surf = "2.3.1"
thiserror = "1.0.29"
