[package]
name = "example"
version = "0.1.0"
authors = ["Victor Saase <vsaase@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util"}
client = { path = "../client"}
dicom = "0.4"
error-chain = "0.12.4"
tokio = { version = "1.5.0", features = ["full"] }
futures = "0.3.14"
serde_json = "1"
log = "0.4"
env_logger = "0.8.3"