[package]
authors = ["Victor Saase <vsaase@gmail.com>"]
description = "A pure Rust implementation of the DICOMweb standard"
edition = "2018"
keywords = ["DICOM", "DICOMweb", "medical"]
license = "MIT OR Apache-2.0"
name = "dicomweb"
readme = "README.md"
repository = "https://github.com/vsaase/dicomweb-rs"
version = "0.1.0"

[badges]
maintenance = {status = "actively-developed"}

[dependencies]
dicomweb-client = {path = "../client", version = "0.1.0"}
dicomweb-server = {path = "../server", version = "0.1.0"}
dicomweb-util = {path = "../util", version = "0.1.0"}
