[package]
name = "dicomweb-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dicomweb-util = { path = "../util" }
log = "0.4"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
dicom = "0.4"
walkdir = "2.3.2"
serde_json = "*"
