[package]
edition = "2018"
name = "dicomweb-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
async-trait = "0.1.51"
dicom = { git = "https://github.com/Enet4/dicom-rs" }
dicomweb-util = { path = "../util" }
http-types = "2.12.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tide = "0.16.0"
