[package]
authors = ["Victor Saase <vsaase@gmail.com>"]
description = "A pure Rust implementation of the DICOMweb standard"
edition = "2018"
keywords = ["DICOM", "DICOMweb", "medical"]
license = "MIT OR Apache-2.0"
name = "dicomweb-server"
readme = "README.md"
repository = "https://github.com/vsaase/dicomweb-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.8.0", features = ["attributes"]}
async-trait = "0.1.51"
dicom = "0.4.0"
dicomweb-util = {path = "../util", version = "0.1.0"}
http-types = "2.12.0"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
tide = "0.16.0"
