[package]
authors = ["Victor Saase <vsaase@gmail.com>"]
edition = "2018"
name = "dicomweb-util"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bytes = "1.0.1"
dicom = { git = "https://github.com/Enet4/dicom-rs" }
dicom-object = "0.4"
enum-as-inner = "0.3.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.29"
