[package]
authors = ["Victor Saase <vsaase@gmail.com>"]
description = "A pure Rust implementation of the DICOMweb standard"
edition = "2018"
keywords = ["DICOM", "DICOMweb", "medical"]
license = "MIT OR Apache-2.0"
name = "dicomweb-util"
readme = "README.md"
repository = "https://github.com/vsaase/dicomweb-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bytes = "1.0.1"
dicom = "0.4.0"
dicom-object = "0.4"
enum-as-inner = "0.3.3"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
thiserror = "1.0.29"
