[package]
name = "async_reqwest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dicomweb-client = { path = "../../client" }
dicom = "0.4"
reqwest = { version = "0.11.3", features = ["json", "multipart", "stream"] }
futures = "0.3.14"
serde_json = "1"
log = "0.4"
env_logger = "0.8.3"
bytes = "1"
tokio = { version = "1", features = ["full"] }
