[package]
name = "blocking_client"
version = "0.1.0"
authors = ["Victor Saase <vsaase@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dicomweb-util = { path = "../../util" }
dicomweb-client = { path = "../../client" }
dicom = { git = "https://github.com/Enet4/dicom-rs" }
reqwest = { version = "0.11.3", features = ["json", "multipart", "stream"] }
futures = "0.3.14"
serde_json = "1"
log = "0.4"
env_logger = "0.9.0"
bytes = "1"
