[package]
authors = ["Victor Saase <vsaase@gmail.com>"]
edition = "2018"
name = "blocking_client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
dicom = "0.4.0"
dicomweb-client = {path = "../../client", features = ["blocking"]}
dicomweb-util = {path = "../../util"}
env_logger = "0.9.0"
futures = "0.3.14"
log = "0.4"
reqwest = {version = "0.11.3", features = ["json", "multipart", "stream"]}
serde_json = "1"
