[package]
name = "server_tide"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dicomweb-server = { path = "../../server" }
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
log = "0.4"
env_logger = "0.8.3"
walkdir = "2.3.2"
async-trait = "0.1.51"
dicom = "0.4.0"
