[package]
edition = "2018"
name = "server_tide"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.8.0", features = ["attributes"]}
async-trait = "0.1.51"
dicom = "0.4.0"
dicomweb-server = {path = "../../server"}
env_logger = "0.9.0"
itertools = "0.10.1"
log = "0.4"
tide = "0.16.0"
walkdir = "2.3.2"
